# openclawwatch

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/: 01-database.md  02-ingest.md  04-alerts.md  05-drift-detection  06-schema-validation.md  07-cli  10-ts-sdk.md  12-publish-workflows.md  13-lifecycle-commands.md  14-comprehensive-agent-examples.md  15-web-ui.md  17-openclaw-integration.md  README.md
.claude/specs/: 00-foundation.md  03-cost.md  08-rest-api.md  09-python-sdk.md  10-ts-sdk.md  11-test-harness.md  12-publish-workflows.md  15-web-ui.md  16-liteLLM-support.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  integration_request.md
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
.tj/: config.toml
docs/: alerts.md  architecture.md  claude-code-integration.md  cli-reference.md  configuration.md  examples.md  export.md  framework-support.md  nemoclaw-integration.md  openclaw.md  roadmap.md
examples/: README.md
examples/alerts_and_drift/: _shared.py  budget_breach_demo.py  drift_demo.py  sensitive_actions_demo.py
examples/multi/: rag_pipeline.py  research_team.py  router_agent.py
examples/openclaw/: README.md
examples/single_framework/: autogen_agent.py  crewai_agent.py  langchain_agent.py  langgraph_agent.py  (+1 more)
sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json
tests/: conftest.py  factories.py  manual-new-release-tests.md  manual-pre-release-testing.md
(+156 files in other folders)
